--- a/taskpane.css
+++ b/taskpane.css
@@ -468,6 +468,7 @@ input[type="number"]{width:72px}
 .app-version {
   font-size: 10px;
   text-align: center;
+  color: #adadad;
 }
 
 /* Result view: hide pre-action content, show follow-up */
