--- a/taskpane.css
+++ b/taskpane.css
@@ -99,7 +99,7 @@ input[type="number"]{width:72px}
   border-radius: 4px 4px 16px; /* fully pill by default */
 
   box-shadow: 0px 12px 10px -8px rgba(0, 0, 0, 0.16), 0px 8px 10px -2px rgba(57, 29, 88, 0.16), 0px 10px 30px rgba(92, 45, 145, 0.24);
-  border: 0.2rem solid transparent;
+  /* border: 0.2rem solid transparent; */
 }
 
 /* Variant: only bottom-right rounded */
