--- a/taskpane.css
+++ b/taskpane.css
@@ -313,7 +313,12 @@ input[type="number"]{width:72px}
 
 /* Responsive */
 @media (max-width: 500px){
-  .px-card{width:100vw;border-radius:0;border-left:0;border-right:0}
+  .px-card{
+    /* width:100vw; */
+    border-radius:0;
+    border-left:0;
+    border-right:0
+  }
   .panel{width:94vw}
 }
 
