--- a/taskpane.css
+++ b/taskpane.css
@@ -70,9 +70,9 @@ input[type="number"]{width:72px}
     width: 24px;
     height: 24px;
     border-radius: 5px;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+    /* appearance: none; */
+    /* -webkit-appearance: none; */
+    /* -moz-appearance: none; */
     border: 2px solid #5C2D91;
     background-color: #fff; /* default */
     cursor: pointer;
