--- a/taskpane.css
+++ b/taskpane.css
@@ -66,6 +66,24 @@ input[type="number"]{width:72px}
 .ms-Checkbox-label{font-size:13px}
 
 
+
+/* .ms-Checkbox input[type="checkbox"] {
+    width: 24px;
+    height: 24px;
+    border-radius: 5px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: 2px solid #5C2D91;
+    background-color: #fff;
+    cursor: pointer;
+} */
+
+/* .ms-Checkbox input[type="checkbox"]:checked {
+    background-color: #5C2D91;
+} */
+
+
 .ms-Checkbox input[type="checkbox"]{
   appearance: none; /* required for custom */
   width: 24px; height: 24px; border-radius: 5px;
